[package]
name = "txn_decoder"
version = "0.1.0"
edition = "2021"

[dependencies]
ethereum-types = "0.14.1"
rlp = "0.5.2"
secp256k1 = "0.27.0"
sha3 = "0.10.8"
hex = "0.4.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
futures = "0.3"
ethers = "2.0"
lazy_static = "1.4"
num-bigint = "0.4"
num-traits = "0.2"
ethabi = "18.0.0"
tiny-keccak = "2.0.2"
regex = "1.10.6"
actix-web = "4.9.0"
actix-cors = "0.7.0"
# antlr-rust = "0.2.2"